--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Contacts</title>
     <script src="https://kit.fontawesome.com/f6cdf53aa9.js" crossorigin="anonymous"></script>
   </head>
   <body>
